--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,41 @@
-# Prerequisites
-*.d
+#include <stdio.h>
+#include <string.h>
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+int processString(char str[]) {
+    int len = strlen(str);
+    int spaceIndex = -1;
+    for(int i=0; i<len; i++) {
+        if(str[i] == ' ') {
+            spaceIndex = i;
+            break;
+        }
+    }
+    if(spaceIndex == -1) {
+        printf("Invalid input string\n");
+        return 0;
+    }
+    str[0] = toupper(str[0]);
+    for(int i=1; i<spaceIndex; i++) {
+        str[i] = tolower(str[i]);
+    }
+    for(int i=spaceIndex+1; i<len; i++) {
+        str[i] = toupper(str[i]);
+    }
+    printf("Revised string: %s\n", str);
+    int length = strlen(str);
+    printf("Length of the string: %d\n", length);
+    if(length < 20) {
+        return length;
+    } else {
+        return sizeof(str);
+    }
+}
+int main() {
+    char str[100];
+    printf("Enter a string with two words: ");
+    fgets(str, sizeof(str), stdin);
+    str[strcspn(str, "\n")] = 0;
+    int result = processString(str);
+    printf("Returned value: %d\n", result);
+    return 0;
+}
